// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Domain/EntityMetadata Deleted 1`] = `
<div
  className="dd dd flex-column has-shadow has-background p-2 g-2"
>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    >
      Foo deleted
    </p>
  </div>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    >
      Foo
    </p>
  </div>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      fb62be03-a0a9-4689-9987-bacee0e7692d
    </p>
  </div>
  <div
    className="dd flex-grow overflow-y-scroll"
  >
    <div
      className="dd has-shadow p-2"
      onClick={[Function]}
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        0
      </p>
      <p
        className="dd text-body1"
      >
        3/10/2021, 7:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </div>
    <div
      className="dd has-shadow p-2"
      onClick={[Function]}
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        1
        <span
          className="dd has-background text-caption bg-danger"
        >
          Deleted
        </span>
        <span
          className="dd has-background text-caption bg-primary"
        >
          Published
        </span>
      </p>
      <p
        className="dd text-body1"
      >
        3/11/2021, 9:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </div>
  </div>
  <button
    className="dd button has-background hoverable text-button bg-primary"
    disabled={true}
    type="button"
  >
    Publish
  </button>
</div>
`;

exports[`Storyshots Domain/EntityMetadata Normal 1`] = `
<div
  className="dd dd flex-column has-shadow has-background p-2 g-2"
>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      Name
    </p>
    <p
      className="dd text-body1"
    >
      Foo 1
    </p>
  </div>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      Type
    </p>
    <p
      className="dd text-body1"
    >
      Foo
    </p>
  </div>
  <div
    className="dd"
  >
    <p
      className="dd text-subtitle2"
    >
      ID
    </p>
    <p
      className="dd text-body1"
    >
      fc66b4d7-61ff-44d4-8f68-cb7f526df046
    </p>
  </div>
  <div
    className="dd flex-grow overflow-y-scroll"
  >
    <div
      className="dd has-shadow p-2"
      onClick={[Function]}
    >
      <p
        className="dd text-subtitle2"
      >
        Version 
        0
        <span
          className="dd has-background text-caption bg-primary"
        >
          Published
        </span>
      </p>
      <p
        className="dd text-body1"
      >
        3/11/2021, 9:19:39 PM
      </p>
      <p
        className="dd text-body1"
      >
        a10e49cd-2f4e-4249-b8ee-eaca8466939b
      </p>
    </div>
  </div>
  <button
    className="dd button has-background hoverable text-button bg-primary"
    disabled={true}
    type="button"
  >
    Publish
  </button>
</div>
`;
